update product dao